thumbnail-factory: Implement cancellation

https://bugzilla.gnome.org/show_bug.cgi?id=763329